WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180694
[GTK][WebRTC] Stop warning with so much verbosity about not implemented RealtimeMediaSourceCenter
https://bugs.webkit.org/show_bug.cgi?id=180694
Summary
[GTK][WebRTC] Stop warning with so much verbosity about not implemented Realt...
Carlos Alberto Lopez Perez
Reported
2017-12-12 07:08:53 PST
This warning is too much verbose, when running the tests lots of warnings are printed. Example:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Tests%29/builds/4646/steps/API%20tests/logs/stdio
/webkit2/WebKitWebView/insert/image: WebKitGTK LIBWEBRTC RealtimeMediaSourceCenter NOT IMPLEMENTED. Returning MockRealtimeMediaSourceCenter instead to avoid crash! WebKitGTK LIBWEBRTC RealtimeMediaSourceCenter NOT IMPLEMENTED. Returning MockRealtimeMediaSourceCenter instead to avoid crash! OK /webkit2/WebKitWebView/insert/link: WebKitGTK LIBWEBRTC RealtimeMediaSourceCenter NOT IMPLEMENTED. Returning MockRealtimeMediaSourceCenter instead to avoid crash! WebKitGTK LIBWEBRTC RealtimeMediaSourceCenter NOT IMPLEMENTED. Returning MockRealtimeMediaSourceCenter instead to avoid crash! OK [....] There is no need for this.
Attachments
Patch
(1.68 KB, patch)
2017-12-12 07:13 PST
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2017-12-12 07:13:49 PST
Created
attachment 329110
[details]
Patch
Carlos Alberto Lopez Perez
Comment 2
2017-12-12 08:46:15 PST
Comment on
attachment 329110
[details]
Patch Clearing flags on attachment: 329110 Committed
r225783
: <
https://trac.webkit.org/changeset/225783
>
Carlos Alberto Lopez Perez
Comment 3
2017-12-12 08:46:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug