[GTK][WebRTC] Stop warning with so much verbosity about not implemented RealtimeMediaSourceCenter https://bugs.webkit.org/show_bug.cgi?id=180694

Reviewed by Youenn Fablet.

No new tests -- no change in functionality.

* platform/mediastream/RealtimeMediaSourceCenter.cpp:
(WebCore::RealtimeMediaSourceCenter::singleton):

Canonical link: https://commits.webkit.org/196598@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225783 268f45cc-cd09-0410-ab3c-d52691b4dbfc